--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "gulp-connect": "^2.3.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.7",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "phantomjs-prebuilt": "^2.1.4",
     "yargs": "^4.2.0"
   }
 }
